--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
             <div class="inline_block logo">
             </div>
             <nav class="inline_block">
-                <a href="/html/">About</a> 
-                <a href="/css/">Skills</a> 
-                <a href="/js/">Work</a> 
-                <a href="/python/">Contact</a>
+                <ul>
+                    <li class="inline_block">About</li>
+                    <li class="inline_block">Skills</li>
+                    <li class="inline_block">Work</li>
+                    <li class="inline_block">Contact</li>
+                </ul>
             </nav>
         </header>
     <section class="heroImg">
         <div class="content">
-        <img src="images/img_1962.jpg" alt="Picture of Jonelle Henning" height="300">
+        <img src="images/IMG_1962.jpg" alt="Picture of Jonelle Henning">
         <p>It's all about me</p>
         <button>Download Resume</button>
         </div>
