--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="heroImg">
         <div class="content">
         <img src="images/IMG_1962.jpg" alt="Picture of Jonelle Henning">
-        <p>I am a freelance UX/UI designer, specializing in web design, development and information architecture. I enjoy empathizing with users and developing websites that are responsive and interactive, and of course, visually appealing. Diving into the user flow of a website is my jam and analyzing and building a better information architecture.
+        <p>I am a freelance UX/UI designer, specializing in web design, development and information architecture. I enjoy empathizing with users and developing websites that are responsive and interactive, and of course, visually appealing. Diving into the user flow of a website is my jam and analyzing and building better information architecture.
             I’m highly collaborative and an excellent team player. 
             </p>
         <button>Download Resume</button>
